<resources>
    <string name="app_name">¿A dónde vamos?</string>
    <string name="text_subtitle">¡Ingresá a nuestra app y disfrutá de todo lo que tenemos para brindarte!\n¡Te esperamos!</string>

    <!-- Services -->
    <string name="maps_debug_api_key">AIzaSyBMfHFvJTPHMgD5zBbRbuJdOjIOJ_HdL4o</string>
    <string name="maps_release_api_key">AIzaSyCSpa7WWX9qTPjkyG81YFSLrJr-e7UxcWs</string>
    <string name="mapbox_debug_api_key">pk.eyJ1IjoidmlzaWdodCIsImEiOiJjangwdWl4cGQwMXhvNDlxbDJlcXZ6OThnIn0.we3GRpaTVBkMNfaYlIcpgA</string>

    <string name="text_ingresar_con_mi_cuenta">Ingresar con mi cuenta</string>
    <string name="text_registrarme">Registrarme</string>
    <string name="text_registrate_o_inici_sesi_n_npara_seguir_aprovechando_los_nbeneficios_de_nuestra_app">¡Registrate o
        iniciá sesión para seguir aprovechando los beneficios de nuestra app!
    </string>
    <string name="text_registrarme_niniciar_sesi_n">Registrarme ó Iniciar sesión</string>
    <string name="text_ver_perfil">Ver perfil</string>
    <string name="text_no_ten_s_cuenta_registrarme">¿No tenés cuenta? ¡Registrarme!</string>
    <string name="text_registrarse">Registrarse</string>
    <string name="text_login">Iniciar sesión</string>
    <string name="text_correo_electronico">Correo eléctronico</string>
    <string name="text_nombre">Nombre</string>
    <string name="text_apellido">Apellido</string>
    <string name="text_ingresar">¡Ingresar!</string>
    <string name="text_registrarme_btn">¡Registrarme!</string>
    <string name="text_ya_tenes_cuenta_iniciar_sesion">¿Ya tenés cuenta? ¡Iniciá sesión!</string>
    <string name="text_contrasena">Contraseña</string>
    <string name="text_olvide_mi_contrasena">Olvidé mi contraseña</string>
    <string name="text_buscar_lugar">Buscar lugar</string>
    <string name="text_editar">Editar</string>
    <string name="text_confirmar">Confirmar</string>
    <string name="text_por_favor_ingresa_el_correo_electronico">Por favor, ingresa el correo electrónico</string>
    <string name="text_por_favor_ingresa_la_contrasenia">Por favor, ingresa la contraseña</string>
    <string name="text_iniciar_sesion">Iniciar sesión</string>
    <string name="text_error_login">No se pudo iniciar sesión, por favor intente nuevamente</string>
    <string name="text_por_favor_ingresa_un_nombre">Por favor, ingresa un nombre</string>
    <string name="text_por_favor_ingresa_un_apellido">Por favor, ingresa un apellido</string>
    <string name="text_por_favor_ingresa_un_correo_electronico">Por favor, ingresa un correo electrónico</string>
    <string name="text_por_favor_ingresa_un_correo_electronico_valido">Por favor, ingresa un correo electrónico válido
    </string>
    <string name="text_las_contrasenias_no_coinciden">Las contraseñas no coinciden</string>
    <string name="text_mapa">Mapa</string>
    <string name="text_mis_lugares_favoritos">Mis lugares favoritos</string>
    <string name="text_historial">Historial</string>
    <string name="text_info">Info</string>
    <string name="text_cerrar_sesion">Cerrar sesión</string>
    <string name="text_no_tienes_lugares_favoritos">No tienes lugares favoritos</string>
    <string name="text_lorem">Lorem ipsum dolor sit amet consectetur adipiscing elit ornare sagittis lectus phasellus elementum mattis congue, nec facilisis hac sapien blandit posuere pellentesque conubia potenti rhoncus ultrices viverra nulla. Himenaeos tincidunt primis etiam posuere est iaculis euismod nullam facilisis volutpat fames rutrum vulputate, sapien donec nisl tempus torquent commodo potenti lectus felis pretium aliquet lacus. Lobortis maecenas rhoncus nisi iaculis blandit curae suspendisse mollis, semper sollicitudin sociis curabitur platea porttitor orci potenti, elementum habitasse urna ad tortor natoque nam.
        \n\nDui justo tortor felis placerat venenatis urna phasellus, ut tempus ante vel platea taciti, viverra rhoncus etiam pretium inceptos ullamcorper sem, non suscipit porta torquent fames. Habitant magna tempor justo volutpat dictum dis condimentum accumsan, non cursus purus et nullam diam commodo, egestas scelerisque montes ac ad neque porta. Congue posuere a enim ac condimentum lobortis phasellus, potenti nunc hac proin pellentesque senectus cursus suscipit, magnis sociis urna aenean quisque litora.</string>
    <string name="text_informacion">Información</string>
    <string name="text_favoritos">Favoritos</string>
    <string name="text_tomaste_una_foto_y_no_te_parece_nque_refleje_la_concurrencia_real_n_puedes_tomar_otra_n_nrecuerda_que_nuestra_ia_nva_aprendiendo_mientras_mas_fotos_se_tomen">
        ¿Tomaste una foto y no te parece que refleje la concurrencia real? ¡Puedes tomar otra! Recuerda que nuestra IA
        va aprendiendo mientras más fotos se tomen :)
    </string>
    <string name="text_como_ves_el_lugar_neligue_una_opcion_para_comparar_lo_que_ve_la_ia_y_lo_que_ven_las_personas">
        ¿Cómo ves el lugar?\nElige una opción para comparar lo que ve la IA y lo que ven las personas :)
    </string>
    <string name="text_se_encontro_un_persona">Se encontró una persona.</string>
    <string name="text_se_encontraron_personas">Se encontraron %1d personas.</string>
    <string name="text_no_se_encontraron_personas">No se han detectado personas en la captura, por favor intentalo
        nuevamente
    </string>
    <string name="text_enviar_mi_reporte">Enviar mi reporte</string>
    <string name="text_like">Like</string>
    <string name="texto_que_tan_lleno_esta_este_lugar">¿Qué tan lleno está este lugar?</string>


    <string-array name="placeTypes">
        <item>Comercios</item>
        <item>Restaurantes</item>
        <item>Supermercados</item>
        <item>Shoppings</item>
        <item>Cajeros automáticos</item>
        <item>Panaderías</item>
        <item>Bancos</item>
        <item>Bares</item>
        <item>Salones de belleza</item>
        <item>Librerías</item>
        <item>Cafés</item>
        <item>Reparación de autos</item>
        <item>Lavaderos de autos</item>
        <item>Casinos</item>
        <item>Dentistas</item>
        <item>Doctores</item>
        <item>Estaciones de servicio</item>
        <item>Gimnasios</item>
        <item>Peluquerías</item>
        <item>Hospitales</item>
        <item>Lavaderos</item>
        <item>Museos</item>
        <item>Parques</item>
        <item>Farmacias</item>
    </string-array>
</resources>
