<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/bg_gradient">

    <include
            android:id="@+id/layoutToolbar"
            layout="@layout/layout_toolbar"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layoutToolbar"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Correo electrónico"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/opensans_regular"
                android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_contrasena"
                android:inputType="textPassword"
                android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_olvide_mi_contrasena"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/opensans_regular"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>}

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ingresar"
            android:padding="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="30dp"
            app:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            app:cornerRadius="20dp"
            android:fontFamily="@font/opensans_semibold"
            app:layout_constraintBottom_toTopOf="@+id/vDivider"/>

    <View
            android:id="@+id/vDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintBottom_toTopOf="@+id/tvRegister"/>

    <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_no_ten_s_cuenta_registrarme"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:fontFamily="@font/opensans_regular"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>