<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/white">

    <include
            android:id="@+id/layoutToolbar"
            layout="@layout/layout_toolbar"
            app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
            android:id="@+id/containerImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layoutToolbar"
            android:paddingVertical="15dp">

        <!-- TODO change this and maybe implement "Add image" option later -->
        <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:src="@drawable/logo_primary"/>

        <!--<ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/logo"/>-->

        <!--<ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_circle_orange"
                android:layout_centerInParent="true"
                android:src="@drawable/ph_user_white"
                android:padding="30dp"/>

        <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/bg_circle_primary"
                android:src="@drawable/ic_add"
                android:padding="5dp"
                android:layout_alignRight="@id/ivPhoto"
                android:layout_alignTop="@id/ivPhoto"
                android:layout_marginTop="10dp"/>-->
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/containerImage"
            app:layout_constraintBottom_toTopOf="@id/btnRegister">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_nombre"
                    android:inputType="textCapSentences"
                    tools:text="Juan"
                    style="@style/text_primary_regular"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_apellido"
                    android:inputType="textCapSentences"
                    tools:text="Gómez"
                    style="@style/text_primary_regular"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Correo electrónico"
                    android:inputType="textEmailAddress"
                    tools:text="email@mail.com"
                    style="@style/text_primary_regular"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Contraseña"
                    android:inputType="textPassword"
                    tools:text="123456"
                    style="@style/text_primary_regular"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Repetir contraseña"
                    android:inputType="textPassword"
                    tools:text="123456"
                    style="@style/text_primary_regular"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_registrarme_btn"
            android:padding="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="30dp"
            app:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            app:cornerRadius="20dp"
            android:fontFamily="@font/opensans_semibold"
            app:layout_constraintBottom_toTopOf="@+id/vDivider"/>

    <View
            android:id="@+id/vDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDarkerLightGrey"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintBottom_toTopOf="@+id/tvLogin"/>

    <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ya_tenes_cuenta_iniciar_sesion"
            android:padding="12dp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:fontFamily="@font/opensans_regular"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>